--- a/bonus/index.html
+++ b/bonus/index.html
@@ -23,8 +23,8 @@
         </div>
         
         <div class="thumbs">
-            <div v-for="slide, i in sliders" class="thumb" :class="activeSlide === i ? 'active' : '' " >
-                <img :src="slide.image" :alt="slide.title">
+            <div v-for="(slide, i) in sliders" :key="i" class="thumb" :class="activeSlide === i ? 'active' : '' " >
+                <img @click="hello" :src="slide.image" :alt="slide.title">
             </div>
             <div class="arrow prev" @click="prevSlide"><i class="fas fa-chevron-up"></i></div>
             <div class="arrow next" @click="nextSlide"><i class="fas fa-chevron-down"></i></div>
